--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                 <div class="col-lg-4 info">
                   <i class="icofont-google-map"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <p>The City College of New York<br>New York, NY 10010</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
