--- a/products.html
+++ b/products.html
@@ -41,12 +41,19 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
+    <div class="d-flex align-items-center">
+      <div class="p-2">
+
+      <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>
+      </div>
 
 <!--      <h1 class="logo mr-auto"><a href="index.html"><span>Com</span>pany</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>
-      <h4>Biomechantronics and Intelligent Robotics Lab</h4>
+<!--      <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>-->
+      <div class="p-2">
+        <h4 class="logo mr-auto"><a href="index.html">Omni Dynamics</a></h4>
+      </div>
+      <div class="ml-auto p-2">
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -76,12 +83,13 @@
 
         </ul>
       </nav><!-- .nav-menu -->
+      </div>
 
       <div class="header-social-links">
 <!--        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>-->
 <!--        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>-->
 <!--        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>-->
-        <a href="#" class="youtube"><i class="icofont-youtube"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCShwLrsSKbwlhoFhTd6KGRg" class="youtube"><i class="icofont-youtube"></i></i></a>
       </div>
 
     </div>
@@ -101,7 +109,6 @@
             <li>Products</li>
           </ol>
         </div>
-
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -113,9 +120,10 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Exoskeleton</li>
-              <li data-filter=".filter-card">Actuator</li>
-              <li data-filter=".filter-web">Sensor</li>
+              <li data-filter=".filter-exo">Exoskeleton</li>
+              <li data-filter=".filter-act">Actuator</li>
+              <li data-filter=".filter-sen">Sensor</li>
+              <li data-filter=".filter-elc">Controller-Electronics</li>
             </ul>
           </div>
         </div>
@@ -124,13 +132,10 @@
 
         <div class="row portfolio-container" data-aos="fade-up">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/products/Lightweight_Knee_Exoskeleton_Thumbnail.png" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-exo">
+            <a href="portable-knee-exoskeleton.html"><img src="assets/img/products/exo_1.png" class="img-fluid"  title="More Details"></a>
             <div class="portfolio-info">
-              <h4>Lightweight Knee Exoskeleton</h4>
-<!--              <a href="assets/img/products/Lightweight_Knee_Exoskeleton_Thumbnail.png" data-gall="portfolioGallery" class="venobox preview-link" title="Exoskeleton 1"><i class="bx bx-plus"></i></a>-->
-<!--              此处替换网页 a href= " "-->
-              <a href="https://omnicstech.github.io/products/lightweight-knee-exoskeleton" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4><a href="portable-knee-exoskeleton.html">Portable Knee Exoskeleton</a></h4>
               <p>
                 Total weight: 2.5 kg (unilateral), 3.9 kg (bilateral)<br>
                 Transmission: 6:1 gear, bi-directional actuation<br>
@@ -141,27 +146,51 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/products/High_Performance_Tethered_Knee_Exoskeleton_Thumbnail.png" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-exo">
+            <a href="tethered-simulink-exoskeleton.html"><img src="assets/img/products/exo_3.jpg" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
-              <h4>High Performance Tethered Knee Exoskeleton</h4>
+              <h4><a href="tethered-simulink-exoskeleton.html">Tethered Simulink Exoskeleton</a></h4>
               <p>
                 Wearable structure weight: 1 kg<br>
                 Transmission: 24:1 gear, bi-directional actuation<br>
                 Torque output: >50 Nm torque, >6.5 rad/s speed<br>
                 Control platform: MATLAB Simulink Realtime<br><br>
               </p>
-<!--              <a href="assets/img/products/High_Performance_Tethered_Knee_Exoskeleton_Thumbnail.png" data-gall="portfolioGallery" class="venobox preview-link" title="Exoskeleton 2"><i class="bx bx-plus"></i></a>-->
-              <a href="https://omnicstech.github.io/products/high-performace-tethered-knee-exoskeleton" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-exo">
+            <a href=portable-hip-exoskeleton.html"><img src="assets/img/products/exo_2.png" class="img-fluid" title="More Details"></a>
+            <div class="portfolio-info">
+              <h4><a href="portable-hip-exoskeleton.html">Portable Hip Exoskeleton</a></h4>
+              <p>
+                Peak Torque: 45Nm<br>
+                Weight: 3.4Kg<br>
+                Bidirectional Actuation: flexion and extension<br><br>
+
+              </p>
+
             </div>
           </div>
 
 
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/products/Beta_Actuator_Thumbnail.png" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-act">
+            <a href="cable-actuator.html"><img src="assets/img/products/act_2.png" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
-              <h4>Smart High Torque Density Actuator</h4>
+              <h4><a href="cable-actuator.html">Cable Actuator</a></h4>
+              <p>
+                Voltage: 24-48V<br>
+                Peak Torque: 35 Nm<br><br>
+              </p>
+
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-act">
+            <a href="high-torque-smart-actuator.html"><img src="assets/img/products/Alpha_Actuator_Thumbnail.png" class="img-fluid" title="More Details"></a>
+            <div class="portfolio-info ">
+              <h4><a href="high-torque-smart-actuator.html" class="text-danger">Smart High Torque Density Actuator</a></h4>
               <p>
                 Nominal Power: 330 W<br>
                 Nominal Voltage: 48 V<br>
@@ -169,53 +198,42 @@
                 Full Range of Phase Current: 12.5 A<br>
                 Motor Type: Brushless servo motor<br><br>
               </p>
-<!--              <a href="assets/img/products/Beta_Actuator_Thumbnail.png" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>-->
-              <a href="https://omnicstech.github.io/products/prod-1" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+
             </div>
           </div>
 
 
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/products/Alubi_B2_Wireless_IMU.png" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sen">
+            <a href="IMU-sensors.html"><img src="assets/img/products/Alubi_B2_Wireless_IMU.png" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
-              <h4>Wireless Inertial Measurement Unit (IMU)</h4>
-              <p>This is a 9-axis Bluetooth IMU (inertial measurement unit) / attitude and heading reference system (AHRS). These units are very versatile, performing accurate, high speed orientation and relative displacement measurements</p>
-<!--              <a href="assets/img/products/Alubi_B2_Wireless_IMU.png" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>-->
-              <a href="https://omnicstech.github.io/products/prod-1" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4><a href="IMU-sensors.html">Wireless Inertial Measurement Unit (IMU)</a></h4>
+              <p>This is a 9-axis Bluetooth IMU (inertial measurement unit) / attitude and heading reference system (AHRS). These units are very versatile, performing accurate, high speed orientation and relative displacement measurements.</p>
+
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/products/FAEXO_1.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-sen">
+            <a href="Loadcell.html"><img src="assets/img/products/loadcell.png" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
+              <h4><a href="Loadcell.html"class="text-danger">Loadcell</a></h4>
+              <p class="text-danger">
+                N/A
 
-              <h4>Custom Force/Torque Sensor</h4>
-                <a href="https://omnicstech.github.io/products/prod-1" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-
-              <p>
-                Maximum Torque: 180 Nm<br>
-                Range of Motion: 45 degrees<br>
-                Force Sensor: Accuracy +/- 1%<br>
-                Sample Frequency: 400 Hz<br><br>
               </p>
-<!--              <a href="assets/img/products/FAEXO_1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>-->
-              <a href="https://omnicstech.github.io/products/prod-1" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
+             </div>
           </div>
 
-<!--          <div class="col-lg-4 col-md-6 portfolio-item filter-app">-->
-<!--            <img src="assets/img/products/product-6.jpg" class="img-fluid" alt="">-->
-<!--            <div class="portfolio-info">-->
-<!--              <h4>Exoskeleton 3</h4>-->
-<!--              <p>Exoskeleton</p>-->
-<!--              <a href="assets/img/products/product-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Exoskeleton 3"><i class="bx bx-plus"></i></a>-->
-<!--              <a href="product-details6.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>-->
-<!--            </div>-->
-<!--          </div>-->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-elc">
+            <a href="controller-electronics.html"><img src="assets/img/products/elc_1.png" class="img-fluid" title="More Details"></a>
+            <div class="portfolio-info">
+              <h4><a href="controller-electronics.html">Controller-Electronics</a></h4>
+              <p class="text-danger">
+                N/A
 
-        </div>
-
+              </p>
+             </div>
+          </div>
+      </div>
       </div>
     </section>
     <!-- End Product Section -->
@@ -279,7 +297,7 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>BIRO Lab</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Omni Dynamics</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
