--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
-    <div class="d-flex">
+    <div class="d-flex align-items-center">
       <div class="p-2">
 
       <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>
       </div>
       <div class="p-2">
-      <h4>Biomechantronics and Intelligent Robotics Lab</h4>
+        <h4 class="logo mr-auto"><a href="index.html">Omni Dynamics</a></h4>
+<!--      <h4>Omni Dynamics</h4>-->
 <!--       Uncomment below if you prefer to use an image logo-->
       </div>
       <div class="ml-auto p-2">
@@ -83,14 +84,14 @@
       </nav><!-- .nav-menu -->
       </div>
 
-<!--      <div class="ml-auto p-2">-->
 
-<!--        <div class="header-social-links">-->
 
-<!--        <a href="#" class="youtube"><i class="icofont-youtube"></i></a>-->
+      <div class="header-social-links">
+
+        <a href="https://www.youtube.com/channel/UCShwLrsSKbwlhoFhTd6KGRg" class="youtube"><i class="icofont-youtube"></i></a>
 <!--        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>-->
 <!--        </div>-->
-<!--       </div>-->
+      </div>
 
     </div>
   </header><!-- End Header -->
@@ -197,35 +198,66 @@
 
     <!-- ======= About Us Section ======= -->
     <section id="about-us" class="about-us">
-      <div class="container" data-aos="fade-up">
-
+      <div class="container" >
         <div class="section-title">
-          <h1>Welcome to the BIRO Lab</strong></h1>
+          <h2>Welcome to Omni Dynamics</h2>
         </div>
+      </div>
 
-<!--        <div class="row content">-->
-<!--          <div class="col-lg-6" data-aos="fade-right">-->
-<!--            <h2>Eum ipsam laborum deleniti velitena</h2>-->
-<!--            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>-->
-<!--          </div>-->
-<!--          <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">-->
-<!--            <p>-->
-<!--              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate-->
-<!--              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in-->
-<!--              culpa qui officia deserunt mollit anim id est laborum-->
-<!--            </p>-->
-<!--            <ul>-->
-<!--              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>-->
-<!--              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>-->
-<!--              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>-->
-<!--            </ul>-->
-<!--            <p class="font-italic">-->
-<!--              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore-->
-<!--              magna aliqua.-->
-<!--            </p>-->
-<!--          </div>-->
-<!--        </div>-->
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h4><a href="products.html">Please see our <span>product page</span> for all available products</a></h4>
+        </div>
+      </div>
 
+      <div class="container" data-aos="fade-up">
+        <div class="column" data-aos="fade-up">
+          <div class="row align-items-center">
+           <div class="col-lg-4 col-md-6" data-aos="fade-right">
+             <a href="products.html"><img src="assets/img/products/FAEXO_1 - Copy.jpg" class="img-fluid"title="More Details"></a>
+
+           </div>
+           <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
+            <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum
+            </p>
+
+           </div>
+          </div>
+
+          <div class="row align-items-center">
+           <div class="col-lg-4 col-md-6" data-aos="fade-right">
+             <a href="products.html"><img src="assets/img/products/actuator3.jpg" class="img-fluid" title="More Details"></a>
+
+           </div>
+           <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
+            <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum
+            </p>
+
+           </div>
+          </div>
+
+          <div class="row align-items-center">
+           <div class="col-lg-4 col-md-6" data-aos="fade-right">
+             <a href="products.html"><img src="assets/img/products/sensor3.jpg" class="img-fluid" title="More Details"></a>
+
+           </div>
+           <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
+            <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum
+            </p>
+
+           </div>
+          </div>
+
+        </div>
       </div>
     </section><!-- End About Us Section -->
 
@@ -323,62 +355,6 @@
     </section> -->
     <!-- End Services Section -->
 
-    <!-- ======= Products Section ======= -->
-    <section id="portfolio" class="portfolio">
-      <div class="container">
-
-        <div class="section-title" data-aos="fade-up">
-          <h5>Please see our product page for all available products</h5>
-        </div>
-
-<!--        <div class="row" data-aos="fade-up">-->
-<!--          <div class="col-lg-12 d-flex justify-content-center">-->
-<!--            <ul id="portfolio-flters">-->
-<!--              <li data-filter="*" class="filter-active">All</li>-->
-<!--              <li data-filter=".filter-app">Exoskeleton</li>-->
-<!--              <li data-filter=".filter-card">Actuator</li>-->
-<!--              <li data-filter=".filter-web">Sensor</li>-->
-<!--            </ul>-->
-<!--          </div>-->
-<!--        </div>-->
-
-        <div class="row portfolio-container" data-aos="fade-up">
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/products/FAEXO_1 - Copy.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Exoskeleton</h4>
-
-              <a href="products.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/products/actuator3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Actuator</h4>
-
-
-              <a href="products.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/products/sensor3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Sensor</h4>
-
-
-              <a href="products.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
-
-
-        </div>
-
-      </div>
-    </section>
-    <!-- End Products Section -->
 
     <!-- ======= Our Clients Section ======= -->
     <!-- <section id="clients" class="clients">
@@ -501,7 +477,7 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>BIRO Lab</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Omni Dynamics</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
