--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
 
 
-        <div class="carousel-item" style="background-image: url(assets/img/slide/STS.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/Picture1.png);">
           <div class="carousel-container">
 <!--            <div class="carousel-content animated fadeInUp">-->
 <!--              <h2>Lorem Ipsum Dolor</h2>-->
@@ -124,7 +124,7 @@
           </div>
         </div>
 
-        <div class="carousel-item" style="background-image: url(assets/img/slide/cake_web.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/Picture2.png);">
 <!--          <div class="carousel-container">-->
 <!--            <div class="carousel-content animated fadeInUp">-->
 <!--              <h2>Lorem Ipsum Dolor</h2>-->
@@ -134,7 +134,7 @@
 <!--          </div>-->
         </div>
 
-        <div class="carousel-item" style="background-image: url(assets/img/slide/logos.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/Picture3.png);">
 <!--          <div class="carousel-container">-->
 <!--            <div class="carousel-content animated fadeInUp">-->
 <!--              <h2>Lorem Ipsum Dolor</h2>-->
@@ -144,17 +144,7 @@
 <!--          </div>-->
         </div>
 
-        <div class="carousel-item" style="background-image: url(assets/img/slide/NoiseCover2.jpg);">
-<!--          <div class="carousel-container">-->
-<!--            <div class="carousel-content animated fadeInUp">-->
-<!--              <h2>Lorem Ipsum Dolor</h2>-->
-<!--              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>-->
-<!--              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>-->
-<!--            </div>-->
-<!--          </div>-->
-        </div>
-
-        <div class="carousel-item" style="background-image: url(assets/img/slide/SmartTipSide.jpg);">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/Picture4.png);">
 <!--          <div class="carousel-container">-->
 <!--            <div class="carousel-content animated fadeInUp">-->
 <!--              <h2>Lorem Ipsum Dolor</h2>-->
@@ -165,15 +155,6 @@
         </div>
 
 
-        <div class="carousel-item" style="background-image: url(assets/img/slide/lab.jpg);">
-<!--          <div class="carousel-container">-->
-<!--            <div class="carousel-content animated fadeInUp">-->
-<!--              <h2>Lorem Ipsum Dolor</h2>-->
-<!--              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>-->
-<!--              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>-->
-<!--            </div>-->
-<!--          </div>-->
-        </div>
 
 
 
@@ -206,6 +187,7 @@
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
+          <h3>Exo-Actuator-Sensors</h3>
           <h4><a href="products.html">Please see our <span>product page</span> for all available products</a></h4>
         </div>
       </div>
@@ -214,7 +196,7 @@
         <div class="column" data-aos="fade-up">
           <div class="row align-items-center">
            <div class="col-lg-4 col-md-6" data-aos="fade-right">
-             <a href="products.html"><img src="assets/img/products/FAEXO_1 - Copy.jpg" class="img-fluid"title="More Details"></a>
+             <a href="products.html"><img src="assets/img/products/index1.png" class="img-fluid"title="More Details"></a>
 
            </div>
            <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
@@ -229,7 +211,7 @@
 
           <div class="row align-items-center">
            <div class="col-lg-4 col-md-6" data-aos="fade-right">
-             <a href="products.html"><img src="assets/img/products/actuator3.jpg" class="img-fluid" title="More Details"></a>
+             <a href="products.html"><img src="assets/img/products/index2.png" class="img-fluid" title="More Details"></a>
 
            </div>
            <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
@@ -244,7 +226,7 @@
 
           <div class="row align-items-center">
            <div class="col-lg-4 col-md-6" data-aos="fade-right">
-             <a href="products.html"><img src="assets/img/products/sensor3.jpg" class="img-fluid" title="More Details"></a>
+             <a href="products.html"><img src="assets/img/products/index3.png" class="img-fluid" title="More Details"></a>
 
            </div>
            <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
