--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
       <div class="ml-auto p-2">
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active">
+          <li class="active drop-down">
             <a href="index.html">Home
               <span class="sr-only">(current)</span>
+              <ul>
+                <li><a href="about.html"></a></li>
+              </ul>
             </a>
 
           </li>
@@ -103,7 +106,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/SaphireSTM2.jpg);">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/Picture1.png);">
 <!--          <div class="carousel-container">-->
 <!--            <div class="carousel-content animated fadeInUp">-->
 <!--              <h2>Welcome to <span>Company</span></h2>-->
@@ -114,15 +117,15 @@
         </div>
 
 
-        <div class="carousel-item" style="background-image: url(assets/img/slide/Picture1.png);">
-          <div class="carousel-container">
-<!--            <div class="carousel-content animated fadeInUp">-->
-<!--              <h2>Lorem Ipsum Dolor</h2>-->
-<!--              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>-->
-<!--              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>-->
-<!--            </div>-->
-          </div>
-        </div>
+<!--        <div class="carousel-item" style="background-image: url(assets/img/slide/Picture1.png);">-->
+<!--          <div class="carousel-container">-->
+<!--&lt;!&ndash;            <div class="carousel-content animated fadeInUp">&ndash;&gt;-->
+<!--&lt;!&ndash;              <h2>Lorem Ipsum Dolor</h2>&ndash;&gt;-->
+<!--&lt;!&ndash;              <p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>&ndash;&gt;-->
+<!--&lt;!&ndash;              <div class="text-center"><a href="" class="btn-get-started">Read More</a></div>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--          </div>-->
+<!--        </div>-->
 
         <div class="carousel-item" style="background-image: url(assets/img/slide/Picture2.png);">
 <!--          <div class="carousel-container">-->
@@ -187,7 +190,7 @@
 
       <div class="container" data-aos="fade-up">
         <div class="section-title">
-          <h3>Exo-Actuator-Sensors</h3>
+
           <h4><a href="products.html">Please see our <span>product page</span> for all available products</a></h4>
         </div>
       </div>
