replace all dynamic to robotics

--- a/IMU-sensors.html
+++ b/IMU-sensors.html
@@ -51,7 +51,7 @@
       <!-- Uncomment below if you prefer to use an image logo -->
 <!--      <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>-->
       <div class="p-2">
-        <h4 class="logo mr-auto"><a href="index.html">Omni Dynamics</a></h4>
+        <h4 class="logo mr-auto"><a href="index.html">Omni Robotics</a></h4>
       </div>
       <div class="ml-auto p-2">
       <nav class="nav-menu d-none d-lg-block">
@@ -298,7 +298,7 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Omni Dynamics</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Omni Robotics</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
