--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Omni Dynamics</title>
+  <title>Omni Robotics</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -47,8 +47,8 @@
       <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>
       </div>
       <div class="p-2">
-        <h4 class="logo mr-auto"><a href="index.html">Omni Dynamics</a></h4>
-<!--      <h4>Omni Dynamics</h4>-->
+        <h4 class="logo mr-auto"><a href="index.html">Omni Robotics</a></h4>
+<!--      <h4>Omni Robotics</h4>-->
 <!--       Uncomment below if you prefer to use an image logo-->
       </div>
       <div class="ml-auto p-2">
@@ -184,7 +184,7 @@
     <section id="about-us" class="about-us">
       <div class="container" >
         <div class="section-title">
-          <h2>Welcome to Omni Dynamics</h2>
+          <h2>Welcome to Omni Robotics</h2>
         </div>
       </div>
 
@@ -462,7 +462,7 @@
 
       <div class="mr-md-auto text-center text-md-left">
         <div class="copyright">
-          &copy; Copyright <strong><span>Omni Dynamics</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Omni Robotics</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
