fix index pic issue

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top">
+  <header id="header" class="top">
     <div class="d-flex align-items-center">
       <div class="p-2">
 
@@ -106,7 +106,7 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/Picture1.png);">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/Picture5.png);">
 <!--          <div class="carousel-container">-->
 <!--            <div class="carousel-content animated fadeInUp">-->
 <!--              <h2>Welcome to <span>Company</span></h2>-->
