--- a/index.html
+++ b/index.html
@@ -54,32 +54,29 @@
       <div class="ml-auto p-2">
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active drop-down">
-            <a href="index.html">Home
-              <span class="sr-only">(current)</span>
-              <ul>
-                <li><a href="about.html"></a></li>
-              </ul>
-            </a>
+          <li class="active"><a href="index.html">Home</a>
+<!--              <span class="sr-only">(current)</span>-->
 
           </li>
 
-          <li class="drop-down"><a href="">About</a>
+          <li class="drop-down"><a href="about.html">About</a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                </ul>
-              </li> -->
+
             </ul>
           </li>
 
           <!-- <li><a href="services.html">Services</a></li> -->
-          <li><a href="products.html">Products</a></li>
-<!--          <li><a href="faq.html">FAQ</a></li>-->
+          <li class="drop-down"><a href="products.html">Products</a>
+            <ul>
+              <li><a href="products.html">Exoskeleton</a></li>
+              <li><a href="products.html">Actuator</a></li>
+              <li><a href="products.html">Sensor</a></li>
+              <li><a href="products.html">Controller-Electronics</a></li>
+            </ul>
+          </li>
+          <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
 <!--          <li><a href="#" class="youtube"><i class="icofont-youtube"></i></a>-->
@@ -199,7 +196,7 @@
         <div class="column" data-aos="fade-up">
           <div class="row align-items-center">
            <div class="col-lg-4 col-md-6" data-aos="fade-right">
-             <a href="products.html"><img src="assets/img/products/index1.png" class="img-fluid"title="More Details"></a>
+             <a href="products.html"><img src="assets/img/products/index1.png" class="img-fluid" title="More Details"></a>
 
            </div>
            <div class="col-lg-8 pt-4 pt-lg-1 " data-aos="fade-left">
@@ -429,7 +426,6 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -438,11 +434,8 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Robot Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Loadcell</a></li>
             </ul>
           </div>
 
