--- a/products.html
+++ b/products.html
@@ -58,11 +58,11 @@
         <ul>
           <li><a href="index.html">Home</a></li>
 
-          <li class="drop-down"><a href="">About</a>
+          <li class="drop-down"><a href="about.html">About</a>
             <ul>
               <li><a href="about.html">About Us</a></li>
               <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
+
               <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -76,8 +76,15 @@
           </li>
 
           <!-- <li><a href="services.html">Services</a></li> -->
-          <li class="active"><a href="products.html">Products</a></li>
-          <li><a href="faq.html">FAQ</a></li>
+          <li class="active drop-down"><a href="products.html">Products</a>
+            <ul>
+              <li><a href="products.html">Exoskeleton</a></li>
+              <li><a href="products.html">Actuator</a></li>
+              <li><a href="products.html">Sensor</a></li>
+              <li><a href="products.html">Controller-Electronics</a></li>
+            </ul>
+          </li>
+          <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
 
@@ -89,7 +96,7 @@
 <!--        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>-->
 <!--        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>-->
 <!--        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>-->
-        <a href="https://www.youtube.com/channel/UCShwLrsSKbwlhoFhTd6KGRg" class="youtube"><i class="icofont-youtube"></i></i></a>
+        <a href="https://www.youtube.com/channel/UCShwLrsSKbwlhoFhTd6KGRg" class="youtube"><i class="icofont-youtube"></i></a>
       </div>
 
     </div>
@@ -161,7 +168,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-exo">
-            <a href=portable-hip-exoskeleton.html"><img src="assets/img/products/exo_2.png" class="img-fluid" title="More Details"></a>
+            <a href="portable-hip-exoskeleton.html"><img src="assets/img/products/exo_2.png" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
               <h4><a href="portable-hip-exoskeleton.html">Portable Hip Exoskeleton</a></h4>
               <p>
@@ -215,7 +222,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sen">
             <a href="Loadcell.html"><img src="assets/img/products/sen_2.png" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
-              <h4><a href="Loadcell.html"class="text-danger">Loadcell</a></h4>
+              <h4><a href="Loadcell.html" class="text-danger">Loadcell</a></h4>
               <p class="text-danger">
                 N/A
 
@@ -264,7 +271,6 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -273,11 +279,8 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Robot Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Loadcell</a></li>
             </ul>
           </div>
 
