--- a/team.html
+++ b/team.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Team</title>
+  <title>Omni Robotics</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/apple-touch-icon.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -41,47 +41,56 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
+    <div class="d-flex align-items-center">
+      <div class="p-2">
 
-      <h1 class="logo mr-auto"><a href="index.html"><span>Com</span>pany</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-
+      <a href="index.html" class="logo mr-auto"><img src="assets/img/Logo_Simple.png" alt="" class="img-fluid"></a>
+      </div>
+      <div class="p-2">
+        <h4 class="logo mr-auto"><a href="index.html">Omni Robotics</a></h4>
+<!--      <h4>Omni Robotics</h4>-->
+<!--       Uncomment below if you prefer to use an image logo-->
+      </div>
+      <div class="ml-auto p-2">
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a>
+<!--              <span class="sr-only">(current)</span>-->
 
-          <li class="drop-down"><a href="">About</a>
+          </li>
+
+          <li class="active drop-down"><a href="about.html">About</a>
             <ul>
               <li><a href="about.html">About Us</a></li>
-              <li class="active"><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li> -->
+              <li><a href="team.html">Team</a></li>
+
             </ul>
           </li>
 
           <!-- <li><a href="services.html">Services</a></li> -->
-          <li><a href="products.html">Products</a></li>
-          <li><a href="faq.html">FAQ</a></li>
+          <li class="drop-down"><a href="products.html">Products</a>
+            <ul>
+              <li><a href="products.html">Exoskeleton</a></li>
+              <li><a href="products.html">Actuator</a></li>
+              <li><a href="products.html">Sensor</a></li>
+              <li><a href="products.html">Controller-Electronics</a></li>
+            </ul>
+          </li>
+          <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
-
+<!--          <li><a href="#" class="youtube"><i class="icofont-youtube"></i></a>-->
         </ul>
       </nav><!-- .nav-menu -->
+      </div>
+
+
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
+
+        <a href="https://www.youtube.com/channel/UCShwLrsSKbwlhoFhTd6KGRg" class="youtube"><i class="icofont-youtube"></i></a>
+<!--        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>-->
+<!--        </div>-->
       </div>
 
     </div>
@@ -217,7 +226,6 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -226,11 +234,8 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Robot Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Custom Loadcell</a></li>
             </ul>
           </div>
 
