--- a/portable-knee-exoskeleton.html
+++ b/portable-knee-exoskeleton.html
@@ -129,6 +129,8 @@
         </div>
 
         <div class="section-title">
+          <h5><a href="assets/datasheet/20201201-Tethered Exoskeleton datasheet - the latest.pdf" download>
+            <img src="assets/img/downloads.jpg">Datasheet</a></h5>
           <h4>Specifications</h4>
           <h7><table class="table table-bordered text-center">
            <caption></caption>
