--- a/tethered-simulink-exoskeleton.html
+++ b/tethered-simulink-exoskeleton.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
   <meta charset="utf-8">
@@ -128,6 +129,9 @@
            <img src="assets/img/products/High_Performance_Tethered_Knee_Exoskeleton_Overview.png" class="img-responsive center-block">
         </div>
         <div class="section-title">
+          <h5><a href="assets/datasheet/20201201-Tethered Exoskeleton datasheet - the latest.pdf" download>
+            <button class="btn"><i class="fa fa-download"></i></button>Datasheet</a></h5>
+
           <h4>Benefits/Advantages</h4>
           <h7><table class="table table-bordered text-center">
            <caption></caption>
