--- a/tethered-simulink-exoskeleton.html
+++ b/tethered-simulink-exoskeleton.html
@@ -130,7 +130,9 @@
         </div>
         <div class="section-title">
           <h5><a href="assets/datasheet/20201201-Tethered Exoskeleton datasheet - the latest.pdf" download>
-            <button class="btn"><i class="fa fa-download"></i></button>Datasheet</a></h5>
+            <img src="assets/img/datasheet.png">Datasheet</a></h5>
+<!--          <h5><a href="assets/datasheet/20201201-Tethered Exoskeleton datasheet - the latest.pdf" download>-->
+<!--            <button class="btn"><i class="fa fa-download"></i></button>Datasheet</a></h5>-->
 
           <h4>Benefits/Advantages</h4>
           <h7><table class="table table-bordered text-center">
