--- a/products.html
+++ b/products.html
@@ -209,6 +209,33 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-act">
+            <a href=""><img src="assets/img/products/RMD X8.png" class="img-fluid" title="More Details"></a>
+            <div class="portfolio-info ">
+              <h4><a href="" class="text-danger">RMD X8</a></h4>
+              <p>
+                Waterproof/Dustproof/Anti-corrosion.IP54<br>
+                Voltage: 48 V<br>
+                14bit/18bit high resolution magnetic encoder<br>
+              </p>
+
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-act">
+            <a href=""><img src="assets/img/products/RMD X8 Pro.png" class="img-fluid" title="More Details"></a>
+            <div class="portfolio-info ">
+              <h4><a href="" class="text-danger">RMD X8 Pro</a></h4>
+              <p>
+                Waterproof/Dustproof/Anti-corrosion.IP54<br>
+                Voltage: 48 V<br>
+                14bit/18bit high resolution magnetic encoder<br>
+
+              </p>
+
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-sen">
             <a href="IMU-sensors.html"><img src="assets/img/products/Alubi_B2_Wireless_IMU.png" class="img-fluid" title="More Details"></a>
