--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,8 @@
 
     <!-- ======= Contact Section ======= -->
     <div class="map-section">
-      <iframe style="border:0; width: 100%; height: 380px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3019.3603894581975!2d-73.95146108472908!3d40.8200470793203!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f6657fa896f5%3A0xa785a9c0ac09561a!2sThe%20City%20College%20of%20New%20York!5e0!3m2!1sen!2sus!4v1606776269138!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
+      <iframe style="border:0; width: 100%; height: 380px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.703879076808!2d-73.98499798473074!3d40.768537279325756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258f6206a5671%3A0x115fbba9eb228a4b!2s1%20Columbus%20Cir%2C%20New%20York%2C%20NY%2010019!5e0!3m2!1sen!2sus!4v1608929723838!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
+
     </div>
 
     <section id="contact" class="contact">
@@ -130,7 +131,7 @@
                 <div class="col-lg-4 info">
                   <i class="icofont-google-map"></i>
                   <h4>Location:</h4>
-                  <p>The City College of New York<br>New York, NY 10010</p>
+                  <p>1 Columbus Cir<br>New York, NY 10019</p>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
