upload hip datasheet

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
               <li><a href="products.html">Exoskeleton</a></li>
               <li><a href="products.html">Actuator</a></li>
               <li><a href="products.html">Sensor</a></li>
-              <li><a href="products.html">Controller-Electronics</a></li>
+              <li><a href="products.html">Controller Electronics</a></li>
             </ul>
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
