--- a/controller-electronics.html
+++ b/controller-electronics.html
@@ -81,7 +81,7 @@
               <li><a href="products.html">Exoskeleton</a></li>
               <li><a href="products.html">Actuator</a></li>
               <li><a href="products.html">Sensor</a></li>
-              <li><a href="products.html">Controller-Electronics</a></li>
+              <li><a href="products.html">Controller Electronics</a></li>
             </ul>
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
@@ -125,7 +125,7 @@
       <div class="container" data-aos="fade-up">
 
          <div class="section-title">
-           <h2>Controller-Electronics</h2>
+           <h2>Controller Electronics</h2>
            <div class="section-title">
             <h4>Benefits/Advantages</h4>
             <h7><table class="table table-bordered text-center text-danger">
