--- a/portable-hip-exoskeleton.html
+++ b/portable-hip-exoskeleton.html
@@ -81,7 +81,7 @@
               <li><a href="products.html">Exoskeleton</a></li>
               <li><a href="products.html">Actuator</a></li>
               <li><a href="products.html">Sensor</a></li>
-              <li><a href="products.html">Controller-Electronics</a></li>
+              <li><a href="products.html">Controller Electronics</a></li>
             </ul>
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
@@ -128,6 +128,8 @@
            <img src="assets/img/products/portable hip exoskeleton 1.png" class="img-responsive center-block">
         </div>
         <div class="section-title">
+          <h5><a href="assets/datasheet/20201226-Portable Hip Exoskeleton datasheet.pdf" download>
+            <img src="assets/img/datasheet.png" class="img-fluid" title="Download">Datasheet</a></h5>
           <h4>Specifications</h4>
           <h7><table class="table table-bordered text-center">
            <caption></caption>
