--- a/products.html
+++ b/products.html
@@ -81,7 +81,7 @@
               <li><a href="products.html">Exoskeleton</a></li>
               <li><a href="products.html">Actuator</a></li>
               <li><a href="products.html">Sensor</a></li>
-              <li><a href="products.html">Controller-Electronics</a></li>
+              <li><a href="products.html">Controller Electronics</a></li>
             </ul>
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
@@ -130,7 +130,7 @@
               <li data-filter=".filter-exo">Exoskeleton</li>
               <li data-filter=".filter-act">Actuator</li>
               <li data-filter=".filter-sen">Sensor</li>
-              <li data-filter=".filter-elc">Controller-Electronics</li>
+              <li data-filter=".filter-elc">Controller Electronics</li>
             </ul>
           </div>
         </div>
@@ -260,7 +260,7 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-elc">
             <a href="controller-electronics.html"><img src="assets/img/products/elc_1.png" class="img-fluid" title="More Details"></a>
             <div class="portfolio-info">
-              <h4><a href="controller-electronics.html">Controller-Electronics</a></h4>
+              <h4><a href="controller-electronics.html">Controller Electronics</a></h4>
               <p class="text-danger">
                 N/A
 
