--- a/tethered-simulink-exoskeleton.html
+++ b/tethered-simulink-exoskeleton.html
@@ -87,7 +87,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-          <li><a href="contact.html">Contact</a></li>
+<!--          <li><a href="contact.html">Contact</a></li>-->
 
         </ul>
       </nav><!-- .nav-menu -->
