resize tables and pics

--- a/index.html
+++ b/index.html
@@ -414,10 +414,11 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Contact:</h3>
             <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
+              1 Columbus Cir<br>
+              New York City, NY 10019<br>
               United States <br><br>
+              <strong>Phone:</strong> +1 5589 55488 55<br>
+              <strong>Email:</strong> info@example.com<br>
             </p>
           </div>
 
