--- a/portable-hip-exoskeleton.html
+++ b/portable-hip-exoskeleton.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<style>
+  body {text-align: center;} table {margin: auto;}
+</style>
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -86,7 +89,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-<!--          <li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -131,7 +134,7 @@
           <h5><a href="assets/datasheet/20201226-Portable Hip Exoskeleton datasheet.pdf" download>
             <img src="assets/img/datasheet.png" class="img-fluid" title="Download">Datasheet</a></h5>
           <h4>Specifications</h4>
-          <h7><table class="table table-bordered text-center">
+          <h7><table border="1" width="500" height="420"class="text-center ">
            <caption></caption>
            <thead>
              <tr>
@@ -209,10 +212,18 @@
            </iframe>
 
         </div>
-         
-      </div>
+        <div class="project-detail">
+          <h4>Publication</h4>
+          <p align="left"><i>Yu S, Huang TH, Yang X, Jiao C, Yang J, Chen Y, Yi J, Su H. "Quasi-Direct Drive Actuation for a Lightweight Hip Exoskeleton with High Backdrivability and High Bandwidth", IEEE/ASME Transactions on Mechatronics, vol. 25, no. 4, pp. 1794-1802, Aug. 2020, doi: 10.1109/TMECH.2020.2995134.
+<!--          <strong><img src="img/pdf-logo.png" alt=""><font color="#819FF7"><a href="img/Paper/20201231 pediatric knee exoskeleton.pdf">PDF</a>-->
+<!--          <a href="https://www.youtube.com/watch?v=MIURcENitO4&feature=youtu.be">| Video</a>-->
+<!--          </font></strong>-->
+          <br></i></p>
+        </div>
 
+      </div></div>
     </section><!-- End product Details Section -->
+
 
   </main><!-- End #main -->
 
@@ -223,17 +234,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Contact:</h3>
-            <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
-              United States <br><br>
-<!--              <strong>Phone:</strong> +1 5589 55488 55<br>-->
-<!--              <strong>Email:</strong> info@example.com<br>-->
-            </p>
-          </div>
+
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
