--- a/portable-knee-exoskeleton.html
+++ b/portable-knee-exoskeleton.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+  body {text-align: center;} table {margin: auto;}
+</style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
@@ -85,6 +88,7 @@
               <li><a href="products.html">Controller Electronics</a></li>
             </ul>
           </li>
+          <li><a href="contact.html">Contact</a></li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
 
@@ -135,7 +139,7 @@
 <!--          <h5><a href="assets/datasheet/20201201-Portable Exoskeleton datasheet - the latest.pdf" download>-->
 <!--            <button class="btn"><i class="fa fa-download"></i></button>Datasheet</a></h5>-->
           <h4>Specifications</h4>
-          <h7><table class="table table-bordered text-center">
+          <h7><table border="1" width="500" height="420" class="text-center ">
            <caption></caption>
            <thead>
              <tr>
@@ -271,17 +275,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Contact:</h3>
-            <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
-              United States <br><br>
-<!--              <strong>Phone:</strong> +1 5589 55488 55<br>-->
-<!--              <strong>Email:</strong> info@example.com<br>-->
-            </p>
-          </div>
+
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
