--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-<!--          <li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
 <!--          <li><a href="#" class="youtube"><i class="icofont-youtube"></i></a>-->
         </ul>
       </nav><!-- .nav-menu -->
