--- a/tethered-simulink-exoskeleton.html
+++ b/tethered-simulink-exoskeleton.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+  body {text-align: center;} table {margin: auto;}
+</style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
@@ -87,7 +90,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-<!--          <li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -135,7 +138,8 @@
 <!--            <button class="btn"><i class="fa fa-download"></i></button>Datasheet</a></h5>-->
 
           <h4>Benefits/Advantages</h4>
-          <h7><table class="table table-bordered text-center">
+          <h7><table border="1" width="750" height="450" class="text-center ">
+
            <caption></caption>
            <thead>
              <tr>
@@ -198,6 +202,16 @@
            <iframe width="1100" height="500" src="https://www.youtube.com/embed/yqgIRmuwHXw"></iframe>
          </div>
 
+        <div class="project-detail text-center">
+          <h4>Publication</h4>
+          <p align="left"><i>Yu S, Huang TH, Wang D, Lynn B, Sayd D, Silivanov V, Park YS, Tian Y, Su H. Design and Control of a High-Torque and Highly-Backdrivable Hybrid Soft Exoskeleton for Knee Injury Prevention during Squatting . IEEE Robotics and Automation Letters (RA-L), 2019.
+<!--          <strong><img src="img/pdf-logo.png" alt=""><font color="#819FF7"><a href="img/Paper/20201231 pediatric knee exoskeleton.pdf">PDF</a>-->
+<!--          <a href="https://www.youtube.com/watch?v=MIURcENitO4&feature=youtu.be">| Video</a>-->
+<!--          </font></strong>-->
+          <br></i></p>
+        </div>
+
+
         <div class="section-title">
           <h4>Comparison</h4>
           <div class="column" data-aos="fade-up">
@@ -243,17 +257,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Contact:</h3>
-            <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
-              United States <br><br>
-<!--              <strong>Phone:</strong> +1 5589 55488 55<br>-->
-<!--              <strong>Email:</strong> info@example.com<br>-->
-            </p>
-          </div>
+
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
