--- a/IMU-sensors.html
+++ b/IMU-sensors.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<style>
+  body {text-align: center;} table {margin: auto;}
+</style>
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -86,7 +88,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-<!--          <li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -133,7 +135,7 @@
                 <img src="assets/img/products/sen_1.png" class="img-responsive center-block">
               </div>
               <div class="col-lg-8 col-md-8 text-center" data-aos="fade-left">
-                <h7><table class="table table-bordered text-center">
+                <h7><table border="1" width="650" height="550" class="text-center">
            <caption></caption>
            <thead>
              <tr>
@@ -255,17 +257,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Contact:</h3>
-            <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
-              United States <br><br>
-<!--              <strong>Phone:</strong> +1 5589 55488 55<br>-->
-<!--              <strong>Email:</strong> info@example.com<br>-->
-            </p>
-          </div>
+
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
