--- a/high-torque-smart-actuator.html
+++ b/high-torque-smart-actuator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<style>
+  body {text-align: center;} table {margin: auto;}
+</style>
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -86,7 +88,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-<!--          <li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -132,7 +134,7 @@
          </div>
         <div class="section-title">
           <h4>Actuator Specifications</h4>
-          <h7><table class="table table-bordered text-center">
+          <h7><table border="1" width="500" height="300" class="text-center">
            <caption></caption>
            <thead>
              <tr>
@@ -190,17 +192,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Contact:</h3>
-            <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
-              United States <br><br>
-<!--              <strong>Phone:</strong> +1 5589 55488 55<br>-->
-<!--              <strong>Email:</strong> info@example.com<br>-->
-            </p>
-          </div>
+
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
