--- a/products.html
+++ b/products.html
@@ -86,7 +86,7 @@
           </li>
           <!--          <li><a href="faq.html">FAQ</a></li>-->
           <!-- <li><a href="blog.html">Blog</a></li> -->
-<!--          <li><a href="contact.html">Contact</a></li>-->
+          <li><a href="contact.html">Contact</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -281,17 +281,7 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Contact:</h3>
-            <p>
-              Steinman Hall <br>
-              The City College of New York<br>
-              New York City, NY 10010<br>
-              United States <br><br>
-<!--              <strong>Phone:</strong> +1 5589 55488 55<br>-->
-<!--              <strong>Email:</strong> info@example.com<br>-->
-            </p>
-          </div>
+
 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
