adjust font uppercase to capitalize

--- a/team.html
+++ b/team.html
@@ -241,7 +241,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Join our subscribers list to get the latestnews, updates and special offers delivered directly in your box.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
