--- a/tethered-simulink-exoskeleton.html
+++ b/tethered-simulink-exoskeleton.html
@@ -205,9 +205,9 @@
         <div class="project-detail text-center">
           <h4>Publication</h4>
           <p align="left"><i>Yu S, Huang TH, Wang D, Lynn B, Sayd D, Silivanov V, Park YS, Tian Y, Su H. Design and Control of a High-Torque and Highly-Backdrivable Hybrid Soft Exoskeleton for Knee Injury Prevention during Squatting . IEEE Robotics and Automation Letters (RA-L), 2019.
-<!--          <strong><img src="img/pdf-logo.png" alt=""><font color="#819FF7"><a href="img/Paper/20201231 pediatric knee exoskeleton.pdf">PDF</a>-->
-<!--          <a href="https://www.youtube.com/watch?v=MIURcENitO4&feature=youtu.be">| Video</a>-->
-<!--          </font></strong>-->
+          <strong><img src="img/pdf-logo.png" alt=""><font color="#819FF7"><a href="assets/publication/Design and Control of a High-Torque and Highly-Backdrivable Hybrid Soft Exoskeleton for Knee Injury Prevention during Squatting.pdf">PDF</a>
+          <a href="https://www.youtube.com/watch?v=Qzi9RGOXLxk&feature=youtu.be">| Video</a>
+          </font></strong>
           <br></i></p>
         </div>
 
