--- a/portable-hip-exoskeleton.html
+++ b/portable-hip-exoskeleton.html
@@ -215,9 +215,9 @@
         <div class="project-detail">
           <h4>Publication</h4>
           <p align="left"><i>Yu S, Huang TH, Yang X, Jiao C, Yang J, Chen Y, Yi J, Su H. "Quasi-Direct Drive Actuation for a Lightweight Hip Exoskeleton with High Backdrivability and High Bandwidth", IEEE/ASME Transactions on Mechatronics, vol. 25, no. 4, pp. 1794-1802, Aug. 2020, doi: 10.1109/TMECH.2020.2995134.
-<!--          <strong><img src="img/pdf-logo.png" alt=""><font color="#819FF7"><a href="img/Paper/20201231 pediatric knee exoskeleton.pdf">PDF</a>-->
-<!--          <a href="https://www.youtube.com/watch?v=MIURcENitO4&feature=youtu.be">| Video</a>-->
-<!--          </font></strong>-->
+          <strong><img src="img/pdf-logo.png" alt=""><font color="#819FF7"><a href="assets/publication/Quasi-Direct Drive Actuation for a Lightweight Hip Exoskeleton with High Backdrivability and High Bandwidth.pdf">PDF</a>
+          <a href="https://www.youtube.com/watch?v=TItov5U1mqI">| Video</a>
+          </font></strong>
           <br></i></p>
         </div>
 
