upload meta for index page

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Omni Robotics</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="description" content="Product Website">
+  <meta name="keywords" content="Robotics, Robot, Mechanical, Engineering, Biomechanics, CCNY">
+  <meta name="author" content="Hao Su">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
